--- a/src/multichannel_messaging/localization/es.json
+++ b/src/multichannel_messaging/localization/es.json
@@ -442,5 +442,185 @@
   "reset_daily_usage": "Reiniciar Uso Diario",
   "reset_usage_confirm": "¿Está seguro de que desea reiniciar el conteo de mensajes de hoy?\n\nEsto solo debe usarse para propósitos de prueba.",
   "usage_reset": "Uso Reiniciado",
-  "usage_reset_success": "El uso diario ha sido reiniciado."
+  "usage_reset_success": "El uso diario ha sido reiniciado.",
+
+  "_comment_missing_dialogs": "=== TRADUCCIONES DE DIÁLOGOS FALTANTES ===",
+  
+  "message_analytics_logs": "Análisis y Registros de Mensajes",
+  "message_analytics_title": "Análisis y Registros de Mensajes",
+  
+  "_comment_whatsapp_settings": "=== DIÁLOGO CONFIGURACIONES WHATSAPP ===",
+  
+  "whatsapp_business_api_configuration": "Configuración de API WhatsApp Business",
+  "api_credentials": "Credenciales de API",
+  "access_token_label": "Token de Acceso:",
+  "access_token_placeholder": "Ingrese su token de acceso de API WhatsApp Business",
+  "phone_number_id_label": "ID de Número de Teléfono:",
+  "phone_number_id_placeholder": "Ingrese el ID de su número de teléfono",
+  "business_account_id_label": "ID de Cuenta Business:",
+  "business_account_id_placeholder": "Ingrese el ID de su cuenta business (opcional)",
+  "show_access_token": "Mostrar token de acceso",
+  "rate_limiting_quotas": "Limitación de Tasa y Cuotas",
+  "rate_limit_label": "Límite de Tasa:",
+  "messages_per_minute": " msg/min",
+  "daily_limit_label": "Límite Diario:",
+  "messages_per_day": " msg/día",
+  "delay_between_messages": "Retraso Entre Mensajes:",
+  "seconds": " segundos",
+  "connection_test": "Prueba de Conexión",
+  "test_connection": "Probar Conexión",
+  "current_status": "Estado Actual",
+  "configuration_status": "Configuración:",
+  "todays_usage": "Uso de Hoy:",
+  "not_configured": "No configurado",
+  "not_available": "No disponible",
+  "setup_instructions": "Instrucciones de Configuración",
+  "whatsapp_setup_instructions": "1. Vaya a developers.facebook.com y cree una app WhatsApp Business\n2. Obtenga su token de acceso del panel de la app\n3. Copie el ID de su número de teléfono de la configuración de API\n4. Ingrese las credenciales arriba y pruebe la conexión\n5. Configure los límites de tasa según su plan",
+  "clear_credentials": "Limpiar Credenciales",
+  "save_settings": "Guardar Configuraciones",
+  "missing_information": "Información Faltante",
+  "missing_token_phone_id": "Por favor ingrese tanto el Token de Acceso como el ID del Número de Teléfono antes de probar.",
+  "error_save_credentials": "Error al guardar credenciales para prueba.",
+  "testing_connection": "Probando conexión...",
+  "settings_saved": "Configuraciones Guardadas",
+  "whatsapp_settings_saved": "Las configuraciones de API WhatsApp Business han sido guardadas exitosamente.",
+  "error_save_settings": "Error al guardar configuraciones: {error}",
+  "clear_credentials_confirm": "¿Está seguro de que desea limpiar todas las credenciales de WhatsApp?\n\nEsto deshabilitará la funcionalidad de WhatsApp hasta ser reconfigurado.",
+  "credentials_cleared": "Credenciales Limpiadas",
+  "whatsapp_credentials_cleared": "Las credenciales de WhatsApp han sido limpiadas exitosamente.",
+  "error_clear_credentials": "Error al limpiar credenciales.",
+  "configured_ready": "✅ Configurado y listo",
+  "not_configured_status": "❌ No configurado",
+  "missing_token_phone_required": "Por favor ingrese tanto el Token de Acceso como el ID del Número de Teléfono.",
+  "error_save_whatsapp_credentials": "Error al guardar credenciales de WhatsApp.",
+  
+  "_comment_whatsapp_web_settings": "=== CONFIGURACIONES WHATSAPP WEB ===",
+  
+  "whatsapp_web_automation_settings": "Configuraciones de Automatización WhatsApp Web",
+  "important_warnings": "⚠️ ADVERTENCIAS IMPORTANTES",
+  "browser_automation_risks": "🚫 Riesgos de Automatización del Navegador:",
+  "may_violate_tos": "   • Puede violar los Términos de Servicio de WhatsApp",
+  "high_risk_suspension": "   • Alto riesgo de suspensión o prohibición de cuenta",
+  "whatsapp_detects_automation": "   • WhatsApp detecta activamente automatización",
+  "manual_interaction_required": "📱 Interacción Manual Requerida:",
+  "opens_whatsapp_web": "   • Abre WhatsApp Web en su navegador",
+  "manual_click_send": "   • Debe hacer clic manualmente en 'Enviar' para cada mensaje",
+  "requires_logged_in": "   • Requiere que esté conectado a WhatsApp Web",
+  "usage_restrictions": "⏱️ Restricciones de Uso:",
+  "low_daily_limits": "   • Límites diarios muy bajos (máximo 30 mensajes)",
+  "slow_sending": "   • Envío lento (retrasos de 45+ segundos requeridos)",
+  "messages_per_minute_limit": "   • Solo 3 mensajes por minuto máximo",
+  "recommended_alternative": "✅ ALTERNATIVA RECOMENDADA:",
+  "use_business_api": "   Use la API WhatsApp Business en su lugar - es oficial,",
+  "reliable_compliant": "   confiable, compatible y diseñada para uso comercial.",
+  "service_status": "Estado del Servicio",
+  "service": "Servicio:",
+  "configuration": "Configuración:",
+  "daily_usage": "Uso Diario:",
+  "service_available": "✅ Disponible (Sin dependencias externas)",
+  "configured": "✅ Configurado",
+  "not_configured_orange": "❌ No configurado",
+  "how_it_works": "Cómo Funciona",
+  "step_1": "1. Usted selecciona destinatarios y compone su mensaje",
+  "step_2": "2. CSC-Reach abre WhatsApp Web en su navegador para cada destinatario",
+  "step_3": "3. El mensaje se pre-llena en la ventana de chat",
+  "step_4": "4. Usted hace clic manualmente en 'Enviar' para enviar cada mensaje",
+  "step_5": "5. El proceso se repite para cada destinatario con retrasos entre ellos",
+  "note_logged_in": "Nota: Debe estar conectado a WhatsApp Web y mantener su navegador abierto durante el proceso.",
+  "configuration_settings": "Configuraciones de Configuración",
+  "enable_auto_send": "Habilitar envío automático (RIESGO MAYOR)",
+  "auto_send_warning": "⚠️ El envío automático usa automatización del sistema para presionar la tecla Enter.\n¡Esto aumenta significativamente el riesgo de suspensión de cuenta!",
+  "close_existing_tabs": "Cerrar pestañas existentes de WhatsApp Web antes de abrir nuevas",
+  "close_tabs_recommended": "✅ Recomendado: Previene que el navegador abra múltiples pestañas de WhatsApp Web.\nEspecialmente importante en Windows para evitar problemas de rendimiento.",
+  "auto_send_delay": "Retraso de envío automático:",
+  "messages_per_minute": "Mensajes por minuto:",
+  "daily_message_limit": "Límite diario de mensajes:",
+  "minimum_delay_messages": "Retraso mínimo entre mensajes:",
+  "conservative_limits_help": "Se aplican límites muy conservadores para reducir el riesgo de suspensión de cuenta.\nEstos límites son mucho menores que otros servicios por seguridad.",
+  "risk_acknowledgment": "Reconocimiento de Riesgo",
+  "ack_violate_tos": "Entiendo que esto puede violar los Términos de Servicio de WhatsApp",
+  "ack_accept_ban_risk": "Acepto el riesgo de suspensión o prohibición de cuenta",
+  "ack_manual_send": "Entiendo que debo enviar manualmente cada mensaje (a menos que el envío automático esté habilitado)",
+  "ack_business_api_alternative": "Reconozco que la API WhatsApp Business es la alternativa recomendada",
+  "ack_full_responsibility": "Asumo total responsabilidad por cualquier consecuencia",
+  "ack_auto_send_risks": "Entiendo que el envío automático aumenta significativamente los riesgos",
+  "final_acknowledgment": "He leído todas las advertencias y elijo proceder bajo mi propio riesgo",
+  "test_service": "Probar Servicio",
+  "save_configuration": "Guardar Configuración",
+  "whatsapp_web_test": "Prueba del Servicio WhatsApp Web",
+  "whatsapp_web_opened": "✅ {message}\n\nWhatsApp Web debería haberse abierto en su navegador.",
+  "whatsapp_web_test_failed": "❌ Prueba falló: {error}",
+  "whatsapp_web_settings_saved": "Las configuraciones de WhatsApp Web han sido guardadas exitosamente.",
+  "whatsapp_web_save_error": "Error al guardar configuraciones de WhatsApp Web: {error}",
+  "reset_usage_success": "El conteo de uso diario ha sido reiniciado a 0.",
+  "reset_usage_error": "Error al reiniciar conteo de uso: {error}",
+  
+  "_comment_message_analytics": "=== DIÁLOGO ANÁLISIS DE MENSAJES ===",
+  
+  "message_analytics_dialog_title": "Análisis y Registros de Mensajes",
+  "messages_30d": "Mensajes (30d)",
+  "success_rate": "Tasa de Éxito",
+  "active_session": "Sesión Activa",
+  "most_used_channel": "Canal Principal",
+  "refresh": "Actualizar",
+  "overview": "Resumen",
+  "message_logs": "Registros de Mensajes",
+  "session_history": "Historial de Sesiones",
+  "analytics": "Análisis",
+  "data_management": "Gestión de Datos",
+  "recent_activity": "Actividad Reciente",
+  "export_data": "Exportar Datos",
+  "clear_logs": "Limpiar Registros",
+  "auto_refresh": "Actualización Automática",
+  "filter_by_date": "Filtrar por Fecha",
+  "filter_by_channel": "Filtrar por Canal",
+  "filter_by_status": "Filtrar por Estado",
+  "all_channels": "Todos los Canales",
+  "all_statuses": "Todos los Estados",
+  "success": "Éxito",
+  "failed": "Falló",
+  "pending": "Pendiente",
+  "cancelled": "Cancelado",
+  "total_messages": "Total de Mensajes",
+  "successful_messages": "Mensajes Exitosos",
+  "failed_messages": "Mensajes Fallidos",
+  "average_success_rate": "Tasa Promedio de Éxito",
+  "peak_usage_time": "Hora Pico de Uso",
+  "most_active_day": "Día Más Activo",
+  "export_csv": "Exportar a CSV",
+  "export_json": "Exportar a JSON",
+  "export_pdf": "Exportar a PDF",
+  "confirm_clear_logs": "¿Está seguro de que desea limpiar todos los registros de mensajes?\n\nEsta acción no se puede deshacer.",
+  "logs_cleared": "Los registros de mensajes han sido limpiados exitosamente.",
+  "export_successful": "Datos exportados exitosamente a: {filename}",
+  "export_failed": "Error al exportar datos: {error}",
+  "no_data_available": "No hay datos disponibles para el período seleccionado.",
+  "loading_analytics": "Cargando análisis...",
+  "generating_report": "Generando reporte...",
+  
+  "_comment_general_dialog_buttons": "=== BOTONES GENERALES DE DIÁLOGO ===",
+  
+  "apply": "Aplicar",
+  "reset": "Reiniciar",
+  "clear": "Limpiar",
+  "refresh": "Actualizar",
+  "export": "Exportar",
+  "import": "Importar",
+  "browse": "Navegar",
+  "select": "Seleccionar",
+  "deselect": "Deseleccionar",
+  "select_all": "Seleccionar Todo",
+  "deselect_all": "Deseleccionar Todo",
+  "next": "Siguiente",
+  "previous": "Anterior",
+  "finish": "Finalizar",
+  "continue": "Continuar",
+  "skip": "Omitir",
+  "retry": "Reintentar",
+  "ignore": "Ignorar",
+  "details": "Detalles",
+  "advanced": "Avanzado",
+  "basic": "Básico",
+  "custom": "Personalizado",
+  "default": "Predeterminado"
 }
