--- a/src/multichannel_messaging/localization/pt.json
+++ b/src/multichannel_messaging/localization/pt.json
@@ -442,5 +442,185 @@
   "reset_daily_usage": "Reiniciar Uso Diário",
   "reset_usage_confirm": "Tem certeza de que deseja reiniciar a contagem de mensagens de hoje?\n\nIsto deve ser usado apenas para propósitos de teste.",
   "usage_reset": "Uso Reiniciado",
-  "usage_reset_success": "O uso diário foi reiniciado."
+  "usage_reset_success": "O uso diário foi reiniciado.",
+
+  "_comment_missing_dialogs": "=== TRADUÇÕES DE DIÁLOGOS AUSENTES ===",
+  
+  "message_analytics_logs": "Análises e Logs de Mensagens",
+  "message_analytics_title": "Análises e Logs de Mensagens",
+  
+  "_comment_whatsapp_settings": "=== DIÁLOGO CONFIGURAÇÕES WHATSAPP ===",
+  
+  "whatsapp_business_api_configuration": "Configuração da API WhatsApp Business",
+  "api_credentials": "Credenciais da API",
+  "access_token_label": "Token de Acesso:",
+  "access_token_placeholder": "Digite seu token de acesso da API WhatsApp Business",
+  "phone_number_id_label": "ID do Número de Telefone:",
+  "phone_number_id_placeholder": "Digite o ID do seu número de telefone",
+  "business_account_id_label": "ID da Conta Business:",
+  "business_account_id_placeholder": "Digite o ID da sua conta business (opcional)",
+  "show_access_token": "Mostrar token de acesso",
+  "rate_limiting_quotas": "Limitação de Taxa e Cotas",
+  "rate_limit_label": "Limite de Taxa:",
+  "messages_per_minute": " msg/min",
+  "daily_limit_label": "Limite Diário:",
+  "messages_per_day": " msg/dia",
+  "delay_between_messages": "Atraso Entre Mensagens:",
+  "seconds": " segundos",
+  "connection_test": "Teste de Conexão",
+  "test_connection": "Testar Conexão",
+  "current_status": "Status Atual",
+  "configuration_status": "Configuração:",
+  "todays_usage": "Uso de Hoje:",
+  "not_configured": "Não configurado",
+  "not_available": "Não disponível",
+  "setup_instructions": "Instruções de Configuração",
+  "whatsapp_setup_instructions": "1. Vá para developers.facebook.com e crie um app WhatsApp Business\n2. Obtenha seu token de acesso do painel do app\n3. Copie o ID do seu número de telefone da configuração da API\n4. Digite as credenciais acima e teste a conexão\n5. Configure os limites de taxa de acordo com seu plano",
+  "clear_credentials": "Limpar Credenciais",
+  "save_settings": "Salvar Configurações",
+  "missing_information": "Informações Ausentes",
+  "missing_token_phone_id": "Por favor digite tanto o Token de Acesso quanto o ID do Número de Telefone antes de testar.",
+  "error_save_credentials": "Falha ao salvar credenciais para teste.",
+  "testing_connection": "Testando conexão...",
+  "settings_saved": "Configurações Salvas",
+  "whatsapp_settings_saved": "As configurações da API WhatsApp Business foram salvas com sucesso.",
+  "error_save_settings": "Falha ao salvar configurações: {error}",
+  "clear_credentials_confirm": "Tem certeza de que deseja limpar todas as credenciais do WhatsApp?\n\nIsto desabilitará a funcionalidade do WhatsApp até ser reconfigurado.",
+  "credentials_cleared": "Credenciais Limpas",
+  "whatsapp_credentials_cleared": "As credenciais do WhatsApp foram limpas com sucesso.",
+  "error_clear_credentials": "Falha ao limpar credenciais.",
+  "configured_ready": "✅ Configurado e pronto",
+  "not_configured_status": "❌ Não configurado",
+  "missing_token_phone_required": "Por favor digite tanto o Token de Acesso quanto o ID do Número de Telefone.",
+  "error_save_whatsapp_credentials": "Falha ao salvar credenciais do WhatsApp.",
+  
+  "_comment_whatsapp_web_settings": "=== CONFIGURAÇÕES WHATSAPP WEB ===",
+  
+  "whatsapp_web_automation_settings": "Configurações de Automação WhatsApp Web",
+  "important_warnings": "⚠️ AVISOS IMPORTANTES",
+  "browser_automation_risks": "🚫 Riscos de Automação do Navegador:",
+  "may_violate_tos": "   • Pode violar os Termos de Serviço do WhatsApp",
+  "high_risk_suspension": "   • Alto risco de suspensão ou banimento da conta",
+  "whatsapp_detects_automation": "   • WhatsApp detecta ativamente automação",
+  "manual_interaction_required": "📱 Interação Manual Necessária:",
+  "opens_whatsapp_web": "   • Abre WhatsApp Web no seu navegador",
+  "manual_click_send": "   • Você deve clicar manualmente em 'Enviar' para cada mensagem",
+  "requires_logged_in": "   • Requer que você esteja logado no WhatsApp Web",
+  "usage_restrictions": "⏱️ Restrições de Uso:",
+  "low_daily_limits": "   • Limites diários muito baixos (máximo 30 mensagens)",
+  "slow_sending": "   • Envio lento (atrasos de 45+ segundos necessários)",
+  "messages_per_minute_limit": "   • Apenas 3 mensagens por minuto no máximo",
+  "recommended_alternative": "✅ ALTERNATIVA RECOMENDADA:",
+  "use_business_api": "   Use a API WhatsApp Business em vez disso - é oficial,",
+  "reliable_compliant": "   confiável, compatível e projetada para uso comercial.",
+  "service_status": "Status do Serviço",
+  "service": "Serviço:",
+  "configuration": "Configuração:",
+  "daily_usage": "Uso Diário:",
+  "service_available": "✅ Disponível (Sem dependências externas)",
+  "configured": "✅ Configurado",
+  "not_configured_orange": "❌ Não configurado",
+  "how_it_works": "Como Funciona",
+  "step_1": "1. Você seleciona destinatários e compõe sua mensagem",
+  "step_2": "2. CSC-Reach abre WhatsApp Web no seu navegador para cada destinatário",
+  "step_3": "3. A mensagem é pré-preenchida na janela de chat",
+  "step_4": "4. Você clica manualmente em 'Enviar' para enviar cada mensagem",
+  "step_5": "5. O processo se repete para cada destinatário com atrasos entre eles",
+  "note_logged_in": "Nota: Você deve estar logado no WhatsApp Web e manter seu navegador aberto durante o processo.",
+  "configuration_settings": "Configurações de Configuração",
+  "enable_auto_send": "Habilitar envio automático (RISCO MAIOR)",
+  "auto_send_warning": "⚠️ O envio automático usa automação do sistema para pressionar a tecla Enter.\nIsto aumenta significativamente o risco de suspensão da conta!",
+  "close_existing_tabs": "Fechar abas existentes do WhatsApp Web antes de abrir novas",
+  "close_tabs_recommended": "✅ Recomendado: Previne que o navegador abra múltiplas abas do WhatsApp Web.\nEspecialmente importante no Windows para evitar problemas de performance.",
+  "auto_send_delay": "Atraso do envio automático:",
+  "messages_per_minute": "Mensagens por minuto:",
+  "daily_message_limit": "Limite diário de mensagens:",
+  "minimum_delay_messages": "Atraso mínimo entre mensagens:",
+  "conservative_limits_help": "Limites muito conservadores são aplicados para reduzir o risco de suspensão da conta.\nEstes limites são muito menores que outros serviços por segurança.",
+  "risk_acknowledgment": "Reconhecimento de Risco",
+  "ack_violate_tos": "Eu entendo que isto pode violar os Termos de Serviço do WhatsApp",
+  "ack_accept_ban_risk": "Eu aceito o risco de suspensão ou banimento da conta",
+  "ack_manual_send": "Eu entendo que devo enviar manualmente cada mensagem (a menos que o envio automático esteja habilitado)",
+  "ack_business_api_alternative": "Eu reconheço que a API WhatsApp Business é a alternativa recomendada",
+  "ack_full_responsibility": "Eu assumo total responsabilidade por quaisquer consequências",
+  "ack_auto_send_risks": "Eu entendo que o envio automático aumenta significativamente os riscos",
+  "final_acknowledgment": "Eu li todos os avisos e escolho prosseguir por minha própria conta e risco",
+  "test_service": "Testar Serviço",
+  "save_configuration": "Salvar Configuração",
+  "whatsapp_web_test": "Teste do Serviço WhatsApp Web",
+  "whatsapp_web_opened": "✅ {message}\n\nWhatsApp Web deveria ter aberto no seu navegador.",
+  "whatsapp_web_test_failed": "❌ Teste falhou: {error}",
+  "whatsapp_web_settings_saved": "As configurações do WhatsApp Web foram salvas com sucesso.",
+  "whatsapp_web_save_error": "Falha ao salvar configurações do WhatsApp Web: {error}",
+  "reset_usage_success": "A contagem de uso diário foi reiniciada para 0.",
+  "reset_usage_error": "Falha ao reiniciar contagem de uso: {error}",
+  
+  "_comment_message_analytics": "=== DIÁLOGO ANÁLISES DE MENSAGENS ===",
+  
+  "message_analytics_dialog_title": "Análises e Logs de Mensagens",
+  "messages_30d": "Mensagens (30d)",
+  "success_rate": "Taxa de Sucesso",
+  "active_session": "Sessão Ativa",
+  "most_used_channel": "Canal Principal",
+  "refresh": "Atualizar",
+  "overview": "Visão Geral",
+  "message_logs": "Logs de Mensagens",
+  "session_history": "Histórico de Sessões",
+  "analytics": "Análises",
+  "data_management": "Gerenciamento de Dados",
+  "recent_activity": "Atividade Recente",
+  "export_data": "Exportar Dados",
+  "clear_logs": "Limpar Logs",
+  "auto_refresh": "Atualização Automática",
+  "filter_by_date": "Filtrar por Data",
+  "filter_by_channel": "Filtrar por Canal",
+  "filter_by_status": "Filtrar por Status",
+  "all_channels": "Todos os Canais",
+  "all_statuses": "Todos os Status",
+  "success": "Sucesso",
+  "failed": "Falhou",
+  "pending": "Pendente",
+  "cancelled": "Cancelado",
+  "total_messages": "Total de Mensagens",
+  "successful_messages": "Mensagens Bem-sucedidas",
+  "failed_messages": "Mensagens Falhadas",
+  "average_success_rate": "Taxa Média de Sucesso",
+  "peak_usage_time": "Horário de Pico de Uso",
+  "most_active_day": "Dia Mais Ativo",
+  "export_csv": "Exportar para CSV",
+  "export_json": "Exportar para JSON",
+  "export_pdf": "Exportar para PDF",
+  "confirm_clear_logs": "Tem certeza de que deseja limpar todos os logs de mensagens?\n\nEsta ação não pode ser desfeita.",
+  "logs_cleared": "Os logs de mensagens foram limpos com sucesso.",
+  "export_successful": "Dados exportados com sucesso para: {filename}",
+  "export_failed": "Falha ao exportar dados: {error}",
+  "no_data_available": "Nenhum dado disponível para o período selecionado.",
+  "loading_analytics": "Carregando análises...",
+  "generating_report": "Gerando relatório...",
+  
+  "_comment_general_dialog_buttons": "=== BOTÕES GERAIS DE DIÁLOGO ===",
+  
+  "apply": "Aplicar",
+  "reset": "Reiniciar",
+  "clear": "Limpar",
+  "refresh": "Atualizar",
+  "export": "Exportar",
+  "import": "Importar",
+  "browse": "Navegar",
+  "select": "Selecionar",
+  "deselect": "Desselecionar",
+  "select_all": "Selecionar Tudo",
+  "deselect_all": "Desselecionar Tudo",
+  "next": "Próximo",
+  "previous": "Anterior",
+  "finish": "Finalizar",
+  "continue": "Continuar",
+  "skip": "Pular",
+  "retry": "Tentar Novamente",
+  "ignore": "Ignorar",
+  "details": "Detalhes",
+  "advanced": "Avançado",
+  "basic": "Básico",
+  "custom": "Personalizado",
+  "default": "Padrão"
 }
